--- a/build.gradle
+++ b/build.gradle
@@ -13,12 +13,19 @@ repositories {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib"
+    implementation "org.jetbrains.kotlin:kotlin-reflect:1.4.21"
     antlr "org.antlr:antlr4:4.9.1"
     compile "org.ow2.asm:asm:9.0"
+    testImplementation "org.junit.jupiter:junit-jupiter-api:5.3.1"
+    testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:5.3.1"
 }
 
 java {
     toolchain {
         languageVersion = JavaLanguageVersion.of(8)
     }
+}
+
+test {
+    useJUnitPlatform()
 }
